Bold text added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div id="app">
         <input type="text" name="nome" id="nome" />
         <button class="botao">adicionar</button>
+        <b>Bold Text</b>
     </div>
 
     <script>
