--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <input type="text" name="nome" id="nome" />
         <button class="botao">adicionar</button>
         <b>Bold Text</b>
+        <span>Mais comandos do gitHub sendo testados</span>
     </div>
 
     <script>
